# pseudoregalia-archipelago

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AP_Randomizer/: CMakeLists.txt  main.cpp  settings.tmpl.toml
AP_Randomizer/apworld/: Items.py  Locations.py  Regions.py  Rules.py  __init__.py  archipelago.json  items.py  locations.py  logic.py  logic.yaml  options.py  regions.py  rules.py  rules_expert.py  rules_hard.py  rules_lunatic.py  rules_normal.py
AP_Randomizer/apworld/constants/: ZONE.py
AP_Randomizer/apworld/dacite/: config.py  core.py  generics.py  types.py
AP_Randomizer/apworld/docs/: en_Pseudoregalia.md  setup_en.md
AP_Randomizer/dependencies/apcpp/: APCpp.exp  APCpp.lib  Archipelago.h
AP_Randomizer/dependencies/openssl/html/man7/: provider-rand.html
AP_Randomizer/dependencies/openssl/lib/: libcrypto.lib  libssl.lib
AP_Randomizer/dependencies/zlib/lib/: zlib.lib  zlibstatic.lib
AP_Randomizer/dependencies/zlib/share/pkgconfig/: zlib.pc
AP_Randomizer/include/: APClient.hpp  APCollectible.hpp  APConsoleManager.hpp  APGameManager.hpp  Client.hpp  Collectible.hpp  DeathLinkMessages.hpp  Engine.hpp  GameData.hpp  GameManager.hpp  GoatManager.hpp  Logger.hpp  MapManager.hpp  ModHooks.hpp  Settings.hpp  StringHash.hpp  StringOps.hpp  Timer.hpp  UnrealConsole.hpp
AP_Randomizer/src/: APClient.cpp  APCollectible.cpp  APConsoleManager.cpp  APGameManager.cpp  Client.cpp  Engine.cpp  GameData.cpp  GameManager.cpp  GoatManager.cpp  Logger.cpp  MapManager.cpp  ModHooks.cpp  Settings.cpp  StringOps.cpp  Timer.cpp  UnrealConsole.cpp
docs/: build_instructions.md  possible_deathlink_messages.txt  project_anatomy.md  steam_deck_installation.md  todo.md
pseudoregalia/: pseudoregalia.uproject
pseudoregalia/Config/: DefaultEngine.ini  DefaultGame.ini
pseudoregalia/Content/: empty.umap
pseudoregalia/Content/Audio/Sounds/: cue_UpgradeGet.uasset  cue_keyGet.uasset  sfxSparkly1.uasset
pseudoregalia/Content/Blueprints/: BP_HpHitable.uasset
pseudoregalia/Content/Blueprints/GameData/: MVMain_Save.uasset  MV_GameInstance.uasset  ST_ZoneData.uasset  ZoneDataObject.uasset
pseudoregalia/Content/Blueprints/LevelActors/: BP_SavePoint.uasset
pseudoregalia/Content/MatTex/Materials/: M_BigKey.uasset  M_SmallKey.uasset
pseudoregalia/Content/Mods/APMenuMod/: AP_ExistingFileMenu.uasset  AP_FileSelectMenu.uasset  AP_FileSelectMenuButton.uasset  AP_NewFileMenu.uasset  BPL_APMenuMod.uasset  LICENSE  MV_APMenuMod.uasset  MV_APSlotMetadata.uasset  README.md  (+3 more)
pseudoregalia/Content/UI/: UI_Base.uasset  UI_GenericButton.uasset  UI_HUD.uasset  UI_MiniPopup.uasset  UI_PauseMenu.uasset
(+62 files in other folders)
